woost/views/resources/styles/backoffice.css
/* ... */
.BackOfficeLayout .FilterBox .filter_entry .field_instance .control,
.BackOfficeLayout .FilterBox .filter_entry .field_instance .Autocomplete.control .text_box {
    font-size: 1em;
}

.BackOfficeLayout .FilterBox .filter_entry fieldset {
    margin: 0;
    padding: 0;
}

.BackOfficeLayout .FilterBox .delete_filter_button {
    position: relative;
    top: 0.2em;
    font-size: 1.2em;
    text-decoration: none;
    color: #888;
}

.BackOfficeLayout .FilterBox .delete_filter_button:hover {
    color: #333;
}

.BackOfficeLayout .CollectionView .filters .filter_desc {
    width: 18em;
    margin-top: 0.3em;
    margin-right: 1em;
}

.BackOfficeLayout .CollectionView .filters .buttons {
    padding: 0;
}

.BackOfficeLayout .CollectionView .filters:not(.empty) .buttons {
    margin-top: 0.5em;
}

.BackOfficeLayout .CollectionView .filters .buttons button {
    width: auto;
}

.BackOfficeLayout .CollectionView .filters .ItemSelector button,
button.TypeSelectorButton {
    font-size: 95%;
}

.BackOfficeLayout .CollectionView .filters .CollectionEditor > .entries,
.BackOfficeLayout .CollectionView .filters .CollectionEditor > .add_button {
    display: inline-block;
    vertical-align: middle;
}

.BackOfficeLayout .CollectionView .filters .CollectionEditor > .entries > .entry {
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    margin-right: 0.5em;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector {
    float: left;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector {
    margin-left: -0.4em;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector > .button {
    padding: 0.4em 0.3em;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector > .button > .label {
    padding-left: 1.6em !important;
    background-position: left center;
    background-image: url(/resources/images/add.png);
    background-repeat: no-repeat;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector .panel {
    text-align: left;
    overflow: auto;
    max-height: 30em;
    min-width: 19em;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector .panel a {
    border: none;
    background: none;
    display: block;
    cursor: pointer;
    text-decoration: none;
    text-align: left;
    padding: 0;
    margin: 0.8em 0;
    color: black;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector .panel a.no_match {
    display: none;
}

.BackOfficeLayout .CollectionView .filters .new_filter_selector .panel a mark {
    font-weight: bold;
    background-color: transparent;
    color: inherit;
}

.modal_selector_dialog {
    padding: 1em;
    height: auto;
    max-height: 92%;
    font-size: 85%;
}

.modal_selector_dialog .container {
    height: 80%;
}

.modal_selector_dialog .container .CheckList {
    -moz-column-width: 25em;
    -webkit-column-width: 25em;
}

.modal_selector_dialog .buttons {
    margin-top: 2em;
    text-align: right;
}

.modal_selector_dialog .buttons input {
    margin-left: 0.8em;
}

.BackOfficeLayout .modal_selector_control .select {
    vertical-align: middle;
    font-size: 90%;
}

.BackOfficeEditView .modal_selector_control {
    margin-bottom: 0.7em;
}

.BackOfficeEditView .modal_selector_control .container {
    padding-left: 1.5em;
}

.BackOfficeEditView .modal_selector_control .container > div {
    display: list-item;
    list-style-type: disc;
    font-size: 85%;
}

.BackOfficeLayout .modal_selector_control .container:empty {
    display: hidden;
}

.BackOfficeLayout .modal_selector_control .container .entry {
    margin-bottom: 0.5em;
}

/* Datepicker styles */

#ui-datepicker-div {
    background-color: rgb(255, 255, 255);
    border: 1px solid rgb(197, 203, 212);
    padding: 0.5em;
}

#ui-datepicker-div a {
    text-decoration: none;
    color: #333;
    cursor: pointer;
}

#ui-datepicker-div a:hover {
    text-decoration: underline;
}

.ui-datepicker-header {
    overflow: hidden;
    margin: 0.5em 0;
}

.ui-datepicker-title {
    font-size: 1.2em;
    text-align: center;
}

.ui-datepicker-prev {
    float: left;
}

.ui-datepicker-next {
    float: right;
}

#ui-datepicker-div th {
    color: #444;
}

#ui-datepicker-div th,
#ui-datepicker-div td {
    padding: 0.3em;
    text-align: center;
}

.ui-datepicker-today {
    background-color: #ccc;
}

.ui-datepicker-current-day {
    border: 1px solid #999;
}

/* File form
-----------------------------------------------------------------------------*/
.FileFieldsView .upload_info {
    font-size: 90%;
    margin: 0;
    margin-top: 0.5em;
    margin-bottom: 0.4em;
    padding: 0;
    padding-bottom: 0.4em;
    padding-left: 2em;
    padding-top: 0.2em;
    background-repeat: no-repeat;
}

/* Edit stack
-----------------------------------------------------------------------------*/
.BackOfficeLayout .stack_node {
    border: 1px solid rgb(210,210,210);
    background-color: rgb(245,245,245);
    padding: 0.4em;
    padding-bottom: 0;
    padding-right: 0;
    margin-left: 0.8em;
}

.BackOfficeLayout .stack_node .stack_node {
    border-right: none;
    border-bottom: none;
}

.BackOfficeLayout .stack_node.root {
    margin: 0.8em;
    margin-top: 1.8em;
}

.BackOfficeLayout .stack_node > .label {
    font-weight: bold;
    margin-bottom: 0.8em;
    color: rgb(120,120,120);
    font-size: 85%;
}

.BackOfficeLayout .stack_node > .label > .relation {
}

.BackOfficeLayout .stack_node.top {
    border: 2px solid #ccc;
    background-color: white;
    padding-bottom: 2em;
}

.BackOfficeLayout .stack_node.top > .label {
    color: rgb(50,50,50);
    font-size: 100%;
}

.BackOfficeLayout .stack_node .body {
    margin: 0;
    padding: 0;
    padding: 0 0.4em;
}

/* Overwrite tiny styles to cutomize toolbar buttons */

/* External */
.defaultSkin .mceExternalClose {
    background:url(/resources/images/icons_tiny.gif) -820px 0 !important;
}
/* ... */

